Action boxes now got to single action view

--- a/app/templates/causes/actions.html
+++ b/app/templates/causes/actions.html
@@ -1,45 +1,37 @@
 {% extends "base.html" %}
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='js/modal.js') }}"></script>
-<script>
-    $(document).ready(function() {
-        $('a.support-action').click(function(e) {
-            var action_name = $(e.target).parents('.support-action').find('h4').text();
-            ga('send', {
-                hitType: 'event',
-                eventCategory: 'action',
-                eventAction: 'popup',
-                eventLabel: action_name
-            });
-        });
-        $('.button-modal-close').click(function(e) {
-            var action_name = $(e.target).parents('.modal').find('h3').text();
-            ga('send', {
-                hitType: 'event',
-                eventCategory: 'action',
-                eventAction: 'popup close',
-                eventLabel: action_name
-            });
-        });
-    });
-</script>
+{% block title %}
+    {{ cause.title }} - {{ super() }}
 {% endblock %}
 
-
 {% block content %}
-{% from "helpers/actions.html" import render_action_list with context %}
+{% from "helpers/actions.html" import render_action_list, render_action_list_full with context %}
 <div class="full-width-container">
     <div class="row u-add-margin-top">
-        <div class="nine columns">
+        <div class="twelve columns">
             <a href="{{ url_for('causes.cause_detail', slug=cause.slug) }}">
                 <h1 class="u-remove-margin-bottom">{{ cause.title }}</h1>
             </a>
         </div>
-        <div class="three columns">
-        </div>
     </div>
-    <hr class="u-remove-margin-bottom">
-    {{ render_action_list(actions.all()) }}
+    <hr>
+    <div class="row">
+        <div class="eight columns">
+            <h3 id="actions">
+                {{ _('Take action to win') }}
+                <span>
+                    {{ _('%(count)s available', count=actions.count()) }}
+                </span>
+            </h3>
+        </div>
+        {% if current_user in cause.creators.all() or current_user.is_admin %}
+        <div class="four columns">
+            <a class="button u-full-width" href="{{ url_for('.action_add_edit', slug=cause.slug) }}">
+                <span class="oi" data-glyph="plus" title="Add new action" aria-hidden="true"></span>
+                <span>&nbsp;{{ _('new action') }}</span>
+            </a>
+        </div>
+        {% endif %}
+    </div>
+    {{ render_action_list_full(actions.all()) }}
 </div>
 {% endblock %}
