--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -136,7 +136,7 @@
         </div>
         {% if current_user in cause.creators.all() or current_user.is_admin %}
         <div class="four columns">
-            <a class="button u-full-width" href="{{ url_for('.action_add_edit', slug=cause.slug) }}">
+            <a class="button u-pull-right" href="{{ url_for('.action_add_edit', slug=cause.slug) }}">
                 <span class="oi" data-glyph="plus" title="Add new action" aria-hidden="true"></span>
                 <span>&nbsp;{{ _('new action') }}</span>
             </a>
@@ -243,7 +243,7 @@
             </div>
             {% if current_user in cause.creators.all() or current_user.is_admin %}
             <div class="four columns">
-                <a class="button u-full-width" href="{{ url_for('posts.post_add', slug=cause.slug) }}">
+                <a class="button u-pull-right" href="{{ url_for('posts.post_add', slug=cause.slug) }}">
                     <span class="oi" data-glyph="plus" title="Add new post" aria-hidden="true"></span>
                     <span>&nbsp;{{ _('new post') }}</span>
                 </a>
