--- a/app/templates/causes/action_single.html
+++ b/app/templates/causes/action_single.html
@@ -44,7 +44,7 @@
         </div>
         <div class="one-third column">
             {% if current_user not in action.supporters.all() %}
-            <p class="u-remove-margin-bottom u-pull-right u-add-margin-left">
+            <p class="u-remove-margin-bottom u-pull-right">
                 {% if current_user.is_authenticated %}
                     {% if action.link %}
                     <a id="action-{{ action.id }}" 
@@ -72,7 +72,7 @@
             <p class="u-remove-margin-bottom u-pull-right">
                 {% if action.link %}
                     <a id="action-{{ action.id }}" 
-                       class="button button-primary support u-add-margin-left" 
+                       class="button button-primary support" 
                        rel="external" 
                        target="_blank"
                        href="{{ action.link }}">
