--- a/app/templates/styleguide/templating.html
+++ b/app/templates/styleguide/templating.html
@@ -186,6 +186,11 @@
                         <li><code><strong>**kwargs</strong></code> : keyword arguments to be passed to the <code>Widget()</code>. Names are converted, e.g. <code>data_validation_error_msg</code> becomes <code>data-validation_error_msg</code></li>
                     </ul>
                 </dd>
+                <dt><code><strong>render_field_no_label(field, **kwargs)</strong></code></dt>
+                <dd>
+                    <strong>Description:</strong><br>
+                    As <strong>render_field</strong>, but do not draw a label
+                </dd>
             </dl>
             <hr>
 
