--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -12,6 +12,7 @@ section (app/templates/styleguide/templating#cause-helpers)
 
 {% macro render_log(log) %}
 {% from "helpers/users.html" import render_avatar %}
+{% from "helpers/posts.html" import render_post with context %}
 {% set captions={
     1: 'added a cause',
     2: 'edited a cause',
@@ -25,25 +26,26 @@ section (app/templates/styleguide/templating#cause-helpers)
     }
 %}
 {% for event in log %}
-<div class="feed-item">
-    <small>{{ moment(event.logged_at).format('MMM Do, YYYY @ HH:mm') }}</small>
-    <p>
-        {{ render_avatar(event.user) }}&nbsp;
-        {{ captions[event.event_type_id] }}:<br>
-        {% if event.event_type_id in [1,2,3,4] %}
-        <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.slug) }}">
-            {{ event.item.title }}
-        </a>
-        {% elif event.event_type_id in [5,6,7] %}
-        <a class="feed-link"  data-target="modal-action-{{ event.item.id }}">
-            {{ event.item.title }}
-        </a>
-        {% elif event.event_type_id in [8,9] %}
-        <a class="feed-link" href="{{ url_for('posts.post_detail', slug=event.item.cause.slug, pk=event.item.id) }}">
-            {{ event.item.title }}
-        </a>
+<div id="log">
+    <div class="feed-item twelve columns">
+    {% if event.event_type_id == 8 %}
+        {{ render_post(event.item.cause, event.item) }}
+        {% else %}
+        <p>
+            {{ render_avatar(event.user) }}&nbsp;
+            {{ captions[event.event_type_id] }}:<br>
+            {% if event.event_type_id in [1,2,3,4] %}
+                <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.slug) }}">
+                    {{ event.item.title }}
+                </a>
+            {% elif event.event_type_id in [5,6,7] %}
+            <a class="feed-link"  data-target="modal-action-{{ event.item.id }}">
+                {{ event.item.title }}
+            </a>
+        </p>
         {% endif %}
-    </p>
+    {% endif %}
+    </div>
 </div>
 {% endfor %}
 {% endmacro %}
