--- a/app/templates/helpers/forms.html
+++ b/app/templates/helpers/forms.html
@@ -27,16 +27,20 @@ section (app/templates/styleguide/templating#form-helpers)
     {% endfor %}
 {% endmacro %}
 
-{% macro render_field(field) %}
-    <label for="{{ field.label.field_id }}">
-        {{ field.label.text }} {% if field.flags.required %}*{% endif %}
-        <span id="form-{{ field.label.field_id }}-error" class="u-pull-right">
-        </span>
-    </label>
+{% macro render_field_no_label(field) %}
     {{ field(**kwargs)|safe }}
     {% if field.errors %}
         {% for error in field.errors %}
         <p class="error">{{ error }}</p>
         {% endfor %}
     {% endif %}
+{% endmacro %}
+
+{% macro render_field(field) %}
+    <label for="{{ field.label.field_id }}">
+        {{ field.label.text }} {% if field.flags.required %}*{% endif %}
+        <span id="form-{{ field.label.field_id }}-error" class="u-pull-right">
+        </span>
+    </label>
+    {{ render_field_no_label(field, **kwargs) }}
 {% endmacro %}
