--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -6,31 +6,26 @@ section (app/templates/styleguide/templating#discussion-helpers)
 {% from "helpers/users.html" import render_avatar %}
 
 {% macro render_post(cause, post) %}
-<div class="post four columns">
-    <h4>
-        <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
-            {{ post.title }}
-        </a>
-        {% if post.author == current_user %}
-        <a href="{{ url_for('posts.post_edit', slug=cause.slug, pk=post.id) }}">
-            {{ _('(edit)') }}
-        </a>
-        {% endif %}
-    </h4>
+<div class="post">
     <article id="post-body-{{ post.id }}">
         {{ post.body | markdown | striptags | truncate(90, True) }} 
     </article>
-    <p class="u-add-margin-top">
-        {{ render_avatar(post.author) }}&nbsp;
-        {{ post.created_on.strftime('%b. %d, %Y') }}
+    <p class="u-add-margin-top u-remove-margin-bottom">
+        <small>
+            {{ render_avatar(post.author) }}&nbsp;
+            <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
+                {{ post.created_on.strftime('%b. %d, %Y') }}
+            </a>
+            {% if post.author == current_user or current_user.is_admin %}
+            <a href="{{ url_for('posts.post_edit', slug=cause.slug, pk=post.id) }}">
+                {{ _('(edit)') }}
+            </a>
+            <img class="icon u-add-margin-left" 
+                src="{{ url_for('static', filename='open-iconic/png/comment-square-2x.png') }}"> 
+            {{ _('%(count)s comments', count=post.comments.count()) }}
+    {% endif %}
+        </small>
     </p>
-    <small>
-        <img class="icon" src="{{ url_for('static', filename='open-iconic/png/comment-square-2x.png') }}"> 
-        {{ _('%(count)s comments', count=post.comments.count()) }}
-        <a class="u-pull-right" href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
-            {{ _('Read More') }}
-        </a>
-    </small>
 </div>
 {% endmacro %}
 
