--- a/app/templates/posts/post_list.html
+++ b/app/templates/posts/post_list.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% set active_page = "discussion" %}
 
+{% block title %}Posts - {{ cause.title }} - {{ super() }}{% endblock %}
+
 {% block content %}
-{% from "helpers/posts.html" import render_post_list %}
+{% from "helpers/posts.html" import render_post_list with context %}
 <div class="full-width-container">
     <div class="row u-add-margin-top">
         <div class="nine columns">
