Display post images on post page

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -152,7 +152,7 @@
             {{ render_action_list(actions.all()) }}
         </div>
     </div>
-    <div class="row">
+    <div class="row" id="log">
         <div class="three columns">
             {% if supporter %}
             <h5 class="u-add-margin-left u-add-margin-right">&#10004;&nbsp;{{ _('You are supporting this cause') }}</h5>
