--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -9,6 +9,9 @@ section (app/templates/styleguide/templating#discussion-helpers)
 <div class="post">
     <article id="post-body-{{ post.id }}">
         {{ post.body | markdown | striptags | truncate(90, True) }} 
+        {% for image in post.images.all() %}
+            <image src="{{ image.image_path|resize('50x50', fill=True) }}" />
+        {% endfor %}
     </article>
     <p class="u-add-margin-top u-remove-margin-bottom">
         <small>
@@ -23,7 +26,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
             <img class="icon u-add-margin-left" 
                 src="{{ url_for('static', filename='open-iconic/png/comment-square-2x.png') }}"> 
             {{ _('%(count)s comments', count=post.comments.count()) }}
-    {% endif %}
+            {% endif %}
         </small>
     </p>
 </div>
