--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -1,21 +1,29 @@
 {% from "helpers/forms.html" import render_field, render_field_no_label %}
-<form id="post" name="post" action="{{ url_for('posts.post_add', slug=cause.slug) }}" method="post">
-    {{ post_form.hidden_tag() }}
-    <fieldset style="width:80%;" class="post-box u-pull-left">
-        {{ render_field_no_label(post_form.body, class="u-full-width", placeholder="Say something nice") }}
-        {{ render_field(post_form.images) }}
-    </fieldset>
-    <fieldset>
-        <input id="save" 
-               type="submit" 
-               value="{{ _('Post') }}" 
-               class="button button-primary u-add-margin-left u-full-width">
-        {% if post %}
-        <a href="{{ url_for('.post_delete', slug=cause.slug, pk=post.id) }}"
-           id="delete" 
-           class="button danger u-mobile-fixed-bottom">
-            {{ _('Delete') }}
-        </a>
-        {% endif %}
-    </fieldset>
-</form>
+<div class="row">
+    <form id="post" name="post" action="{{ url_for('posts.post_add', slug=cause.slug) }}" method="post">
+        {{ post_form.hidden_tag() }}
+        <div class="eight columns u-remove-margin-left post-box">
+            {{ render_field_no_label(post_form.body, class="u-full-width", placeholder="Say something nice") }}
+        </div>
+        <div class="two columns">
+            <label for="images" class="button u-full-width">
+                <span class="oi" data-glyph="paperclip" title="Attach" aria-hidden="true"></span>
+                <span>Add Image</span>
+            </label>
+            {{ render_field_no_label(post_form.images) }}
+        </div>
+        <div class="two columns">
+            <input id="save" 
+                   type="submit" 
+                   value="{{ _('Post') }}" 
+                   class="button button-primary u-full-width">
+            {% if post %}
+            <a href="{{ url_for('.post_delete', slug=cause.slug, pk=post.id) }}"
+               id="delete" 
+               class="button danger u-mobile-fixed-bottom">
+                {{ _('Delete') }}
+            </a>
+            {% endif %}
+        </div>
+    </form>
+</div>
