--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -582,22 +582,18 @@ a.support-action {
 .post-box textarea {
     min-height: 2em;
 }
-
-form#post input#images {
- display: none;
+.button-icon {
+    display: inline-block;
+    line-height: 8px;
+    height: 41px;
+    padding-top: 7px;
+    font-weight: normal;
 }
-
-form#post label[for=images] {
- display: inline-block;
- background-color: #3299bb;
- color: #fff;
- cursor: pointer;
- padding: 0 15px;
- line-height: 28px;
- font-size: 11px;
- font-weight: 600;
- border-radius: 4px;
- text-transform: uppercase;
+.button-icon:hover {
+    cursor: pointer;
+}
+.button-icon img {
+    vertical-align: -80%;
 }
 
 /* Footer 
