--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -2,28 +2,27 @@
 <div class="row">
     <form id="post" name="post" action="{{ url_for('posts.post_add', slug=cause.slug) }}" method="post">
         {{ post_form.hidden_tag() }}
-        <div class="eight columns u-remove-margin-left post-box">
+        <div class="nine columns u-remove-margin-left post-box">
             {{ render_field_no_label(post_form.body, class="u-full-width", placeholder="Say something nice") }}
         </div>
-        <div class="two columns">
+        <div class="three columns">
+            <!--
             <label for="images" class="button u-full-width">
                 <span class="oi" data-glyph="paperclip" title="Attach" aria-hidden="true"></span>
                 <span>Add Image</span>
             </label>
-            {{ render_field_no_label(post_form.images) }}
-        </div>
-        <div class="two columns">
+            -->
             <input id="save" 
                    type="submit" 
                    value="{{ _('Post') }}" 
-                   class="button button-primary u-full-width">
-            {% if post %}
-            <a href="{{ url_for('.post_delete', slug=cause.slug, pk=post.id) }}"
-               id="delete" 
-               class="button danger u-mobile-fixed-bottom">
-                {{ _('Delete') }}
-            </a>
-            {% endif %}
+                   style="width:55%;"
+                   class="button button-primary u-pull-right u-add-margin-left">
+
+            <label for="images" class="button-icon u-pull-right u-add-margin-right">
+                <img src="{{ url_for('static', filename='open-iconic/png/image-3x.png') }}">
+                <small>Add Image</small>
+            </label>
+            {{ render_field_no_label(post_form.images) }}
         </div>
     </form>
 </div>
