--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -39,6 +39,7 @@
 <script src="{{ url_for('static', filename='jquery.lazy/jquery.lazy.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bxslider-4/dist/jquery.bxslider.min.js') }}"></script>
 <script src="{{ url_for('static', filename='autosize/dist/autosize.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/post_image_preview.js') }}"></script>
 <script>
     $(document).ready(function() {
         $('.actions-slider').bxSlider({
